--- a/positioning/style.css
+++ b/positioning/style.css
@@ -20,6 +20,7 @@ body {
     background:lightpink;
     bottom: 100px;
     left: 100px;
+    z-index: 5;
 }
 
 .fixed{
@@ -27,6 +28,8 @@ body {
     background:lightblue;
     bottom:20px;
     right:20px;
+    width: 500px;
+    z-index:4;
 }
 
 .absolute{
