--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.head {
+    position: absolute;
+    left:-700px;
+}
+
 body {
     background-color: #70b6d4;
+    position:absolute;
+    right: -10%;
 }
