--- a/jobsite copy/test.css
+++ b/jobsite copy/test.css
@@ -145,7 +145,7 @@ body {
    
   }
 
-  .bottom {
+  .bottom1 {
     display: grid;
     position: relative;
     height: 40%; /* Adjust the height as needed */
@@ -158,7 +158,7 @@ body {
     text-align: center;
     padding: 40px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4); /* Add drop shadow */
-   font: size 100%;
+   font-size: 100%;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.608);
    gap: 20px;
@@ -166,6 +166,18 @@ body {
 
   }
 
+  .bottom {
+
+    text-align: center;
+ 
+   font-size:100%;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.608);
+   display: block;
+   margin: 50px;
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4); /* Add drop shadow */
+
+  }
 
 
 
