--- a/testsite/test.css
+++ b/testsite/test.css
@@ -65,13 +65,15 @@ body {
   .container1 {
 
     text-align: center;
- 
+  box-shadow: 1px 1px 30px 10px  rgba(24, 24, 0, 0.259);
+  
    font-size:500%;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.608);
+   text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.608);
    display: block;
    margin: 50px;
-
+   background-color: rgba(0, 0, 0, 0.16);
+  
   }
 
 
@@ -122,7 +124,15 @@ body {
 
   .grid-container2 {
     width: 750px;
+  aspect-ratio: 3/1;
  
+
+  margin: auto;
+  
+  margin-right: 30%;
+  
+
+  
   display: grid;
   grid-template-columns: auto auto auto  ;
  
@@ -145,27 +155,6 @@ body {
    
   }
 
-  .bottom1 {
-    display: grid;
-    position: relative;
-    height: 40%; /* Adjust the height as needed */
-    max-height: 90%;
-    min-height: 50%;
-    max-width: 80%;
-    background-color: #e0e0e02c;
-    left: 10%;
-    margin: 10px;
-    text-align: center;
-    padding: 40px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4); /* Add drop shadow */
-   font-size: 100%;
-   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.608);
-   gap: 20px;
- 
-
-  }
-
   .bottom {
 
     text-align: center;
@@ -178,6 +167,26 @@ body {
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4); /* Add drop shadow */
 
   }
+  .bottom2 {
+
+    text-align: center;
+ 
+   font-size:100%;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+   display: block;
+   margin: 50px;
+  
+  }
+
+
+  .catagories {
+
+ text-transform: uppercase ;
+ border-width: 10px;
+
+  }
+
 
 
 
