--- a/test2/love.css
+++ b/test2/love.css
@@ -5,7 +5,10 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #ffffff;
+    background-image: url("images/love.gif"), url("images/love.gif"), url("images/love.gif");
+    background-repeat:repeat-y, repeat-y, repeat-x;
+    background-position: right 10px, left 10px;
+    background-size: 10%;
     position: relative;
     height: 100vh;
     display: flex;
@@ -29,18 +32,18 @@ figure {
 
     text-align: center;
     text-align: center;
-   
+
     font-size: smaller;
     text-indent: 0;
    font-size:500%;
    font-family:'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
    text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.608);
    display: block;
-   margin: 50px;
+   margin: 130px;
+   margin-bottom: 100px;
    top:0%;
    position: absolute;
    caption-side: top;
-   
 
   }
 
@@ -116,14 +119,14 @@ figure {
     font-size: 250%;
     z-index: 3;
     margin: 0 140px 10px;
-    padding-left: 50px;
-    padding-right: 50px;
+  
     top: 300px;
-    background-color: rgb(255, 254, 201);
+    background-color: rgb(255, 168, 170);
     position: absolute;
     line-height: 70px;
-    text-shadow: 10px 32px 10px rgba(0, 0, 0, 0.708) ;
-    box-shadow: 5px 50px 50px 40px rgb(255, 254, 199);
+    text-shadow: 10px 32px 10px rgba(0, 0, 0, 0.708);
+    box-shadow: 5px -2px 50px 40px rgb(255, 168, 170);
+    margin-top: 90px;
     
     
 }
