--- a/finaltest/enter.css
+++ b/finaltest/enter.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     image-rendering: optimizeSpeed;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .centered-text {
