--- a/FINAL SITE/style.css
+++ b/FINAL SITE/style.css
@@ -62,6 +62,7 @@ body {
     text-indent: 10px;
     z-index: 2;
     
+    
 }
 
 
@@ -76,6 +77,8 @@ body {
     top: 0;
     height: 100px;
 }
+
+
 .container{
     width: 80%;
     margin: 0 auto; 
@@ -86,9 +89,30 @@ body {
 }
 .container1{
     width: 80%;
-    margin: 0 auto; 
+    margin: 0  auto; 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: x-large;
+
+
+
+}
+
+#links a {
+
+  color: black;
+  text-decoration: none ;
+  background-color: #fff;
+  padding: 7px 7px;
+  font-size:xx-small;
+  
+
+}
+
+.container100{
+  width: 80%;
+  margin: 0 900px  auto; 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: x-large;
 
 
 }
@@ -138,12 +162,14 @@ body {
 
   .search-container {
     position: absolute;
-    left: 400px;
+    left:400px;
+    margin: 0 30% auto; 
+    width: 300px;
   }
 
 .menue {
     width: 80%;
-    margin: 0 auto; 
+    margin: 0 30% auto; 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size:large;
     position: absolute;
