--- a/FINAL SITE/style.css
+++ b/FINAL SITE/style.css
@@ -40,15 +40,15 @@ body {
    position: relative;
 }
 .d {
-    display: block;
+    display: flex;
     position:absolute;
-    margin: 3%;
+    margin: 11% 16% auto;
     float: left;
-    width: 20%;
+    width: 70%;
     height: 160px;
     background-color: lightgrey;
     box-shadow: 3px 3px 10px;
-    bottom: 120px;
+    bottom: 20%;
     z-index: 2;
     border-radius: 10px;
 
@@ -87,6 +87,7 @@ body {
     text-indent: 10px;
     line-height: 1.6;
 }
+
 .container1{
     width: 80%;
     margin: 0  auto; 
@@ -190,7 +191,7 @@ body {
         margin: 0 auto; 
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: x-large;
-        font: ;
+       
     
 
   }
