--- a/FINAL SITE/style.css
+++ b/FINAL SITE/style.css
@@ -54,13 +54,14 @@ body {
 
 }
 .container3{
-    border-radius: 15px;
+   
     width: 80%;
-    margin: 0 auto; 
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: medium;
-    text-indent: 10px;
     z-index: 2;
+    justify-content: center;
+    margin-left: 20%;
+ 
     
     
 }
@@ -76,6 +77,18 @@ body {
 .fixed-header{
     top: 0;
     height: 100px;
+}
+
+.fixed-header2 {
+  width: 100%;
+  position: absolute;        
+  background: #333;
+  padding: 10px 0;
+  color: #fff;
+}
+.fixed-header2{
+  top: 50;
+  height: 100px;
 }
 
 
@@ -159,6 +172,16 @@ body {
     opacity: .5 ;
   }
 
+  #banner2 {
+    position:absolute;
+    display: flex;
+    top: 10px;
+    left: 31%;
+    width: 300px;
+    height: 60px;
+    z-index: 20;
+    opacity: 1 ;
+  }
 
 
   .search-container {
