--- a/FINAL SITE/style.css
+++ b/FINAL SITE/style.css
@@ -8,7 +8,7 @@ body {
 .a {
     display:block;
     position:absolute;
-    margin: .5%;
+    margin: 1.5%;
     width: 15%;
     height: 40px;
     background-color: rgb(255, 255, 255);
@@ -170,6 +170,7 @@ body {
     height: 100px;
     z-index: 2;
     opacity: .5 ;
+   
   }
 
   #banner2 {
@@ -181,6 +182,7 @@ body {
     height: 60px;
     z-index: 20;
     opacity: 1 ;
+    
   }
 
 
